[gd_scene load_steps=3 format=3 uid="uid://bt3ukvj6bj34m"]

[ext_resource type="PackedScene" uid="uid://b4xvkq7n8j2y1" path="res://entities/board/BoardManager.tscn" id="1_board_scene"]
[ext_resource type="Script" path="res://main/Main.gd" id="1_main_script"]

[sub_resource type="LabelSettings" id="1_label_settings"]
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_main_script")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="BoardManager" parent="." instance=ExtResource("1_board_scene")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="PhaseLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 300.0
offset_bottom = -50.0
text = "Phase: PlayerDecision"
label_settings = SubResource("1_label_settings")

[node name="StatusLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = -20.0
text = "Player 1: ⏳ | Player 2: ⏳"
label_settings = SubResource("1_label_settings")

[node name="PlayerModesLabel" type="Label" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -80.0
offset_right = -20.0
offset_bottom = -50.0
text = "P1 Mode: Move | P2 Mode: Move"
label_settings = SubResource("1_label_settings")
horizontal_alignment = 2
